ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/snapshot_inbox__empty_inbox_and_empty_attention_board.snap
---
source: crates/ainb-plugin-hangar/tests/snapshot_inbox.rs
expression: full
---
Inbox    (all) asks runs issues                                                              I inbox
┌ needs you ───────────────────────────────────────────────────────────────────────────────────────┐
│ ✓ nothing needs you                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ recent ──────────────────────────────────────────────────────────────────────────────────────────┐
│ no notifications                                                                                 │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
