ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/snapshot_inbox__narrow_80col.snap
---
source: crates/ainb-plugin-hangar/tests/snapshot_inbox.rs
expression: full
---
Inbox  member:me   [1 need you]  [4 unread]    (all) asks runs issues    I inbox
┌ needs you ───────────────────────────────────────────────────────────────────┐
│▸● ASK  40s   boxtrack · Decide the Boxtrack sqlite file location             │
│  OPTIONS                                                                     │
│  ① data/boxtrack.db                                                          │
│     Repo-root data/ dir, outside api/src                                     │
│  ② api/app.db                                                                │
│     Sits next to the api package                                             │
│  h/l option · enter/1-9 answer                                               │
│ ● ERR  3m    api · agent_error exit 65                                       │
└──────────────────────────────────────────────────────────────────────────────┘
┌ recent ──────────────────────────────────────────────────────────────────────┐
│ ✗ 9m   qa-1 failed     HGR-5 Ticket stats: GET /api/tickets/stats            │
│ ● 2m   impl-1 done     HGR-3 Add GET /api/version endpoint                   │
│ ◔ 4m   impl-1 running  HGR-3 Add GET /api/version endpoint                   │
│ + 12m  new issue       HGR-5 Ticket stats: GET /api/tickets/stats            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
